update to new GH